package com.narxoz.rpg.observer;

public enum GameEventType {

    ATTACK_LANDED,

    HERO_LOW_HP,

    HERO_DIED,

    BOSS_PHASE_CHANGED,
    BOSS_DEFEATED
}
